# werewolf

./: .actrc  .env.example  .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  JULES_DEVELOPMENT_PLAN.md  README.md  REQUIREMENTS_AND_ROADMAP.md  SPEC  TODO  check.sh  dev.sh  flake.nix  index.html  package.json  prepare.sh  tailwind.config.js  tsconfig.json  vite.config.js  werewolf_full_export.sql
.github/: README.md
src-tauri/: .env  Cargo.toml  build.rs  rustc-ice-2025-08-23T16_23_40-3184012.txt  tauri.conf.json
src-tauri/.sqlx/: query-02be87144cf85407336e4e4d02aaa0f8523dcaffe04c7510c066b0193f066742.json  query-06f8f50e50b7a37d895d8821d4c676253a6430c7c64038eb650f2bd8e7f82635.json  query-16b7015658de45342da04aa764c2090c9a2a676c9f4778a4a73adc0d6037ded0.json  query-1d9dcc2abec2a26d29a6934a4a087eb513bad13ec6f168cd085807613a797ea1.json  query-1fd6346cccf0f174d48e44c312370d8daf16835ca7fc253d55e844b0b6d32b05.json  query-2311d02e11de88ac5c81808ce1b1dd40a1b21103ec56bd34277913c9d155424d.json  query-25db0bd0c15e0011cd319acaa0430f49886dd3fa2a97b15ad28f7cd3097ed442.json  query-31a80454f5960fdf99280d608857b1295f2389d39cbcfd999ff6b55a80f69de5.json  query-369d1426abe866f60120f914555cf13d49c300ffee5693d60f1c88a66c0ede6b.json  query-3902a05813c0ee720a67cb081436fc04fab1f1405de302dd7d1c1752972b6504.json  query-40c6595906bf72a0a71ae15150492e7312b2c443c1469bb36cc40c80e582d668.json  query-47e24b24a0d56887114fc8ec3609dc3a8678e4f620eee93a474640263f426070.json  query-5a2bdf2a7aad044484049eef3b8886088391f24caf8a83c63efed1639f14e186.json  query-60ad59f6f34a5368c5e96bee030beea1882d794476ca26111cad6a1d8298a034.json  query-61274661cad731cd9e4d6bd04610da227a4c7b0bc6a090e83a1b163ba84f3967.json  query-6ac3072d7fb5302b3f73e026c379d2f8a6ccde29bf9801899f29f05b40305784.json  (+22 more)
(+313 files in other folders)
