[package]
name = "werewolf"
version = "0.1.0"
description = "Powerlifting contest management application"
authors = ["ribelo"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "werewolf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "werewolf"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Core framework
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-opener = "2.0"
tauri-plugin-log = "2.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate", "macros"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Enums
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Image processing
image = { version = "0.25", features = ["webp", "jpeg", "png"] }
webp = "0.3"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "fmt"] }
tracing-appender = "0.2"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.9"

# Paths
directories = "6.0"

# CLI
clap = { version = "4.5", features = ["derive", "string"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Excel export
rust_xlsxwriter = "0.90"
specta = { version = "1.0", features = ["typescript"] }

[dev-dependencies]
# Testing
tempfile = "3.14"
tokio-test = "0.4"

